--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,73 +1,107 @@
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JackedInTheBox</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&display=swap" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-avatar@latest/dist/avatar.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-    integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/stylesheets/style.css" />
-</head>
-
-<body class="bg-white">
-  <div class="container-fluid p-0 nav-bar">
-    <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
-      <a href="" class="navbar-brand">
-        <h2 class="m-0 display-5 font-weight-bold text-uppercase text-white">Jacked in the Box</h2>
-      </a>
-      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-        <div class="navbar-nav ml-auto p-4">
-
-          <a href="/" class="nav-item nav-link">Search Exercises</a>
-          {{#if loggedIn}}
-          <a href="/homepage" class="nav-item nav-link">Home</a>
-          <a href="/bmi" class="nav-item nav-link">Calculate BMI</a>
-          <a href="" class="nav-item nav-link" id="logout">Logout</a>
-          {{else}}
-          <a href="/login" class="nav-item nav-link">Login</a>
-          {{/if}}
-        </div>
-      </div>
-    </nav>
+<div class="container">
+  <div class="d-flex flex-column text-center mb-5">
+    <h2 class="display-6 font-weight-bold text-uppercase">Welcome {{username}}</h2>
   </div>
-  <div class="container-fluid page-header mb-5">
-    <div class="d-flex flex-column align-items-center justify-content-center pt-0" style="min-height: 300px">
-      {{!-- <h4 class="display-4 mt-0 text-white text-uppercase font-weight-bold"></h4> --}}
-      <div class="d-inline-flex">
-        <img src="/images/logo.jpg" class="logo" alt="Website logo" />
+</div>
+<div class="container-fluid position-relative bmi mb-5">
+  <div class="row align-items-center">
+    <div class="col-md-6">
+      <div class="pr-md-3 workout-head d-md-block">
+        <h4 class="text-primary">Workout Information</h4>
+        <h4 class="display-4 text-white font-weight-bold mb-4">Please Enter
+          Workout Info</h4>
+      </div>
+    </div>
+    <div class="col-md-6 bg-secondary py-5">
+      <div class="py-5 px-3">
+        <form class="new-workout-form">
+          <div class="form-row">
+            <div class="col form-group">
+              <input type="text" name="workout-name" class="form-control form-control-lg bg-dark text-white"
+                placeholder="Workout Name" />
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="col form-group">
+              <input type="date" name="workout-date" class="form-control form-control-lg bg-dark text-white"
+                placeholder="Date" disabled />
+            </div>
+            <div class="col form-group">
+              <input type="text" name="workout-goal" class="form-control form-control-lg bg-dark text-white"
+                placeholder="Goal" />
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="col form-group">
+              <input type="text" name="workout-sequence" class="form-control form-control-lg bg-dark text-white"
+                placeholder="Sequence" />
+            </div>
+            <div class="col form-group">
+              <input type="text" name="workout-muscleGroup" class="form-control form-control-lg bg-dark text-white"
+                placeholder="Muscle Group" />
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="col">
+              <input type="submit" class="btn btn-lg btn-block btn-dark border-light savebtn" value="Save" />
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
 
-  <main>
-    {{{body}}}
-  </main>
-  <div class="footer container-fluid mt-5 py-3 px-sm-3 px-md-5 text-white">
-    <div class="container pt-2">
-      <p class="m-0 text-center text-white">
-        &copy;
-        <a class="text-white font-weight-bold" href="#">Jacked in the Box</a>.
-        All Rights Reserved.
-      </p>
+</div>
+{{#if workouts.length}}
+<div class="container">
+  <div class="d-flex flex-column text-center mb-5">
+    <h2 class="display-6 font-weight-bold">Personal Gym Space</h2>
+    <h4 class="text-primary font-weight-bold">Most Recent Workouts</h4>
+  </div>
+</div>
+<div class="tab-content mb-5">
+  <div id="class-all" class="container tab-pane p-0 active">
+    <div class="table-responsive">
+      <table class="table table-bordered table-lg m-0">
+        <thead class="bg-secondary text-white text-center">
+          <tr>
+            <th>Date</th>
+            <th>Workout Name</th>
+            <th>Goal</th>
+            <th>Sequence</th>
+            <th>Muscle Group</th>
+          </tr>
+        </thead>
+
+        <tbody class="text-center">
+          {{#each workouts as |workout|}}
+          <tr>
+            <th class="bg-secondary text-white align-middle">{{format_date date}}</th>
+            <td>
+              <h5>{{name}}</h5>
+            </td>
+            <td>
+              <h5>{{goal}}</h5>
+            </td>
+            <td>
+              <h5>{{sequence}}</h5>
+            </td>
+            <td>
+              <h5>{{muscleGroup}}</h5>
+            </td>
+          </tr>
+          {{/each}}
+        </tbody>
+        {{/if}}
+      </table>
     </div>
   </div>
-  {{#if loggedIn}}
-  <script src="/javascript/logout.js"></script>
-  {{/if}}
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
-    integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
-    crossorigin="anonymous"></script>
-</body>
+</div>
+<div class="container">
+  <a href="/previousworkouts" class="btn btn-lg btn-block previousbtn">Previous Workouts</a>
 
-</html>
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.34/moment-timezone.min.js"></script>
+<script src="/javascript/add-workoutinfo.js"></script>
